# MasterRecherche

./: .gitignore  Cours.tar.xz  Exposé  README.md  Untitled 1.ods  slope.txt  sources.txt
Cours/: plan_article
Cours/Exposé/: pres.odg  pres.tex
Cours/Image/: ho6_2.m
Cours/MachineLearning/: .~lock.CONTEXTE_MINI_PROJET.pptx#  ML_SDS_COURS_0.pptx  ML_SDS_COURS_7_SON(1).pptx  ML_SDS_EXO_ET_SOLUTION_COURS_7.pptx  ML_SDS_ML_CHEKC_LIST.pptx  ML_SDS_SOLUTION_EXO_COURS_1.pptx
Cours/interval_analysis/: Readme.txt  main_TD0.py  main_TD1.py  main_TD2.py  main_TD3.py  main_TD4.py  main_TD5.py  main_TD6.py  run_unit_tests.py
Deutsch-Jozsa/: denombrement.py  denombrement.py~  deutsch-jozsa.tex
Exposé/: pres.tex
Programmation/DeutschJozsa/: dj.py
Programmation/GateBuilding/: AND.py  GateBuilder_Younes03.py  OR.py  function_addition.py  function_evaluate_classical.py  function_evaluate_dj.py  function_evaluate_quantum.py
Programmation/Grover/: iter.py  new_f.py
Programmation/OptimalDetector/: EqualProbabilityMeasurement.py  OptimalDetector.py  OptimalDetector_Primal.py  lsm.py  nouveau.py
Programmation/Optimization/: benchmark.txt  benchmark1.txt  convex.wxmx  convex2.wxmx  mutualinfo.wxmx  opti.txt  opti_log.txt  opti_quantum.txt  opti_quantum_3.txt  optim.wxmx  (+2 more)
Programmation/Optimization/test_ibex/: CMakeLists.txt  QuantumOptimization.cpp  bwd_xlog.cpp  euler.txt  main.cpp  matplotlibcpp.h  opti.cov  opti.cov~  opti.txt  test_function.txt
Q#/: RandomGenerator.out  RandomGenerator.pyg  RandomGenerator.tex
qcl-0.6.4-x86_64-linux-gnu/: Dependencies.txt
(+229 files in other folders)
